testing/framework/resources/Advanced/Failing/mondrian/query5679.e
Store 3	Store 3	39696
Store 18	Store 18	38382
Store 9	Store 9	36509
Store 10	Store 10	34791
Store 20	Store 20	34452
Store 17	Store 17	33858
Store 8	Store 8	30797
Store 12	Store 12	30584
Store 16	Store 16	30268
Store 2	Store 2	28206
Store 13	Store 13	27694
Store 5	Store 5	24597
Store 4	Store 4	23759
Store 6	Store 6	23688
Store 7	Store 7	23598
Store 1	Store 1	23593
Store 19	Store 19	23112
Store 14	Store 14	22478
Store 15	Store 15	21215
Store 11	Store 11	20319
Store 21	Store 21	\N
Store 22	Store 22	\N
Store 23	Store 23	\N
Store 24	Store 24	\N
HQ	\N	\N
